@@ -45,6 +45,7 @@
 #include "config.h"
 #include "util/netevent.h"
 struct listen_list;
+struct addrinfo;
 
 /**
  * Listening for queries structure.
@@ -100,5 +101,14 @@ struct listen_dnsport* listen_create(struct comm_base* base,
  * delete the listening structure
  */
 void listen_delete(struct listen_dnsport* listen);
+
+
+/**
+ * Create and bind nonblocking UDP socket
+ * @param addr: address info ready to make socket.
+ * @return: the socket. -1 on error.
+ */
+int create_udp_sock(struct addrinfo *addr);
+
 
 #endif /* LISTEN_DNSPORT_H */
