@@ -5,6 +5,7 @@
 	- netevent communication reply storage structure.
 	- minimal query header sanity checking for worker.
 	- copied over rbtree implementation from NSD (BSD licensed too).
+	- outgoing network query service work.
 
 30 January 2007: Wouter
 	- links in example/ldns-testpkts.c and .h for premade packet support.
